--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
 		"svelte-check": "^3.0.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"postcss": "^8.4.23",
+		"postcss-load-config": "^4.0.1",
+		"svelte-preprocess": "^5.0.3",
+		"autoprefixer": "^10.4.14",
+		"tailwindcss": "^3.3.1"
 	},
 	"type": "module"
 }
